--- a/source/sass/block-styles/_offers.scss
+++ b/source/sass/block-styles/_offers.scss
@@ -4,12 +4,12 @@
   padding: 60px 0 20px 0;
 
   @media (max-width: 1024px) {
-    padding: 25px 25px 80px 25px;
+    padding: 25px 25px 32px 25px;
     min-height: 580px;
   }
 
   @media (max-width: 727px) {
-    padding: 25px 20px 60px 20px;
+    padding: 25px 20px 28px 20px;
   }
 }
 
@@ -164,19 +164,14 @@
   @include list-reset();
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  column-gap: 28px;
   padding: 20px 0 0 0;
+  margin: 0 -56px 0 0;
 
   @media (max-width: 1024px) {
     flex-direction: column;
     align-items: center;
-    row-gap: 48px;
     padding: 20px 0 0 0;
-  }
-
-  @media (max-width: 727px) {
-    row-gap: 32px;
+    margin: 0;
   }
 }
 
@@ -185,10 +180,16 @@
   width: 31%;
   min-height: 620px;
   display: flex;
+  margin: 0 28px 48px 0;
 
   @media (max-width: 1024px) {
     max-width: 770px;
     width: 100%;
     min-height: 256px;
+    margin: 0 0 48px 0;
+  }
+
+  @media (max-width: 727px) {
+    margin: 0 0 32px 0;
   }
 }
