--- a/source/sass/block-styles/_social.scss
+++ b/source/sass/block-styles/_social.scss
@@ -1,7 +1,28 @@
 .social {
   @include list-reset();
   display: flex;
-  column-gap: 16px;
+  flex-wrap: wrap;
+  padding: 50px 0 0 0;
+  align-items: center;
+
+  @media (max-width: 1024px) {
+    padding: 25px 0;
+    max-width: 20%;
+  }
+
+  @media (max-width: 727px) {
+    padding: 0;
+    max-width: 100%;
+    margin: 0 -16px 0 0;
+  }
+}
+
+.social li {
+  margin: 0 16px 16px 0;
+
+  @media (max-width: 1024px) {
+    margin: 5px 16px 5px 0;
+  }
 }
 
 .social a {
